fix:friend-list-title gap수정

--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -367,3 +367,9 @@ p {
         white-space: nowrap; 
     }
 }
+@media (max-width: 400px) {
+    .friends-list-management-header {
+        gap: 50px; 
+    }
+
+}
